--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -1139,9 +1139,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "### Go back and fix dataframes\n",
-    "\n",
     "def scaled_data(X_train, X_validate, X_test, continuous_cols):\n",
     "\n",
     "    scaler = sklearn.preprocessing.MinMaxScaler()\n",
@@ -1149,51 +1146,120 @@
     "    # Fit the scaler, (fit the thing)\n",
     "    scaler.fit(X_train[continuous_cols])\n",
     "\n",
-    "    # Use the scaler to transform train, validate, test (use the thing)\n",
-    "    X_train_scaled = pd.DataFrame(scaler.transform(X_train[continuous_cols])\n",
-    "    X_validate_scaled = pd.DataFrame(scaler.transform(X_validate[continuous_cols])\n",
-    "    X_test_scaled = pd.DataFrame.scaler(transform(X_test[continuous_cols])\n",
+    "    # Use the scaler to transform train, validate, test (use the thing) and make them into dataframes\n",
+    "    X_train_scaled = pd.DataFrame(scaler.transform(X_train[continuous_cols]), index=X_train.index, columns=X_train.columns)\n",
+    "    X_validate_scaled = pd.DataFrame(scaler.transform(X_validate[continuous_cols]), index=X_validate.index, columns=X_validate.columns)\n",
+    "    X_test_scaled = pd.DataFrame(scaler.transform(X_test[continuous_cols]), index=X_test.index, columns=X_test.columns)\n",
+    "                                        \n",
+    "                                        \n",
     "    \n",
     "    return X_train_scaled, X_validate_scaled, X_test_scaled "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "df6cb435-93cf-4d7a-9aa7-4ac9b7da297d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['total_bill', 'group_size', 'price_per_person', 'tip_percentage'], dtype='object')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_15053/4135654394.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscaled_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_validate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'total_bill'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'group_size'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'price_per_person'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tip_percentage'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_15053/968404524.py\u001b[0m in \u001b[0;36mscaled_data\u001b[0;34m(X_train, X_validate, X_test, continuous_cols)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Fit the scaler, (fit the thing)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontinuous_cols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Use the scaler to transform train, validate, test (use the thing)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3462\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3463\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3464\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3465\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3466\u001b[0m         \u001b[0;31m# take() does not accept boolean indexers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/lib/python3.9/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1312\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1313\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1314\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1316\u001b[0m         if needs_i8_conversion(ax.dtype) or isinstance(\n",
-      "\u001b[0;32m/usr/local/anaconda3/lib/python3.9/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[0;34m(self, key, indexer, axis)\u001b[0m\n\u001b[1;32m   1372\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0muse_interval_msg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1373\u001b[0m                     \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1374\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"None of [{key}] are in the [{axis_name}]\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1375\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1376\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['total_bill', 'group_size', 'price_per_person', 'tip_percentage'], dtype='object')] are in the [columns]\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scaled_data(X_train, X_validate, X_test,['total_bill', 'group_size', 'price_per_person', 'tip_percentage'])"
+    "X_train_scaled, X_validate_scaled, X_test_scaled = scaled_data(X_train, X_validate, X_test,['total_bill', 'group_size', 'price_per_person', 'tip_percentage'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0e236890-e6f6-4c3d-9502-0ae9d2f3299c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>group_size</th>\n",
+       "      <th>price_per_person</th>\n",
+       "      <th>tip_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.307114</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.150344</td>\n",
+       "      <td>0.252863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>0.092355</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.032258</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>0.206805</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.182796</td>\n",
+       "      <td>0.161808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0.411622</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.452194</td>\n",
+       "      <td>0.240873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>0.657534</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.775647</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     total_bill  group_size  price_per_person  tip_percentage\n",
+       "19     0.307114         0.4          0.150344        0.252863\n",
+       "173    0.092355         0.2          0.032258        1.000000\n",
+       "119    0.206805         0.2          0.182796        0.161808\n",
+       "29     0.411622         0.2          0.452194        0.240873\n",
+       "238    0.657534         0.2          0.775647        0.000000"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_scaled.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "be13c74e-664e-46b6-973a-b262db484874",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5d71b37d-7ff2-4c8e-9a67-f9f4bfa16f44",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1327,7 @@
        "price_per_person            3"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "47b494d8-1790-4ad1-a9ec-2fa55e77103c",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1354,7 @@
        "Index(['group_size', 'tip_percentage'], dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f9ac102d-e287-4a23-864d-0faa406c2f69",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1433,7 @@
        "238         2.0        0.035638"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "db0652c0-63d6-4fbc-b5ff-3831dfcb48e4",
    "metadata": {},
    "outputs": [],
@@ -1441,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "7695f012-d57c-4307-b91e-e0424ca323a4",
    "metadata": {},
    "outputs": [
@@ -1451,7 +1517,7 @@
        "Index(['total_bill', 'group_size'], dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "407c2302-a1e0-4a79-a5da-ead5958bc7fc",
    "metadata": {},
    "outputs": [],
@@ -1497,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "899efc9d-a49c-4365-b475-f48bdbec274a",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1573,7 @@
        "Index(['group_size', 'tip_percentage'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "87ff6411-3ac9-4092-b987-b6a5f99d7adc",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1701,7 @@
        "Neuveville                20.6  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "9f042a88-906f-463b-9f57-24ebe4a6d5eb",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "a85e8a06-183a-4f15-94fe-05609c35c49e",
    "metadata": {},
    "outputs": [],
@@ -1687,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "5080b477-5e56-4429-a970-79fa554c7f4e",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1763,7 @@
        "((25, 6), (12, 6), (10, 6))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "4be6e18e-ebd3-49c1-99a3-6c3d4487efd1",
    "metadata": {},
    "outputs": [
@@ -1794,7 +1860,7 @@
        "Yverdon         49.5           15          8      6.10              22.5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "1fc9c9d3-271d-40d5-93b0-c51b4ed5461d",
    "metadata": {},
    "outputs": [],
@@ -1849,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "3277cb12-7933-40ec-8e8d-907c5d80f2cb",
    "metadata": {},
    "outputs": [],
@@ -1867,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "766ee923-3f3a-4557-9ff5-e4e7808a3d97",
    "metadata": {},
    "outputs": [
@@ -1877,7 +1943,7 @@
        "Index(['Examination', 'Catholic', 'Infant.Mortality'], dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,45 +1962,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "12b8417d-5852-4594-851b-b8724602dc7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Examination', 'Infant.Mortality'], dtype='object')"
+       "Index(['Agriculture', 'Examination', 'Infant.Mortality'], dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfe(X_train, y_train, 2)"
+    "rfe(X_train, y_train, 3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "832a74b4-7942-4ac5-b834-84879225e3c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1bb24d5-45f2-414a-abda-70086fecd078",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c576d3e-a6e3-4083-b270-7cb91d1a2921",
+   "id": "191f2503-7338-4ba6-84f1-0be3ee72c29d",
    "metadata": {},
    "outputs": [],
    "source": []
