--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -9,9 +9,268 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6be14ebb-cb8f-4518-93bf-e61712dd60a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import wrangle\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "import wrangle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37a5fc02-5ade-4642-9960-5fff3d99b3c1",
+   "metadata": {},
+   "source": [
+    "We want to be able to predict the property tax assessed values ('taxvaluedollarcnt') of Single Family Properties that had a transaction during 2017.\n",
+    "\n",
+    "We have a model already, but we are hoping your insights can help us improve it. I need recommendations on a way to make a better model. Maybe you will create a new feature out of existing ones that works better, try a non-linear regression algorithm, or try to create a different model for each county. Whatever you find that works (or doesn't work) will be useful. Given you have just joined our team, we are excited to see your outside perspective.\n",
+    "\n",
+    "One last thing, Zach lost the email that told us where these properties were located. Ugh, Zach :-/. Because property taxes are assessed at the county level, we would like to know what states and counties these are located in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173b94f9-2630-4340-9a28-ef4fe2270e63",
+   "metadata": {},
+   "source": [
+    "predict assessed home value for single family properties using regression techniques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1010eb27-f47e-432e-86fc-2e445d859e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading from csv file...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parcel_id</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
+       "      <th>tax_assessed_value_USD</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>tax_amount</th>\n",
+       "      <th>fed_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10759547</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27516.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11193347</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11215747</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11229347</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2108.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>174.21</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11324547</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3633.0</td>\n",
+       "      <td>296425.0</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>6941.39</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152859</th>\n",
+       "      <td>14356230</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2262.0</td>\n",
+       "      <td>960756.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>13494.52</td>\n",
+       "      <td>6059.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152860</th>\n",
+       "      <td>14157725</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3127.0</td>\n",
+       "      <td>536061.0</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>6244.16</td>\n",
+       "      <td>6059.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152861</th>\n",
+       "      <td>14356183</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>208057.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5783.88</td>\n",
+       "      <td>6059.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152862</th>\n",
+       "      <td>14367624</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>424353.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>5302.70</td>\n",
+       "      <td>6059.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152863</th>\n",
+       "      <td>12385768</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2110.0</td>\n",
+       "      <td>554009.0</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>6761.20</td>\n",
+       "      <td>6037.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2152864 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         parcel_id  bedrooms  bathrooms  square_feet  tax_assessed_value_USD  \\\n",
+       "0         10759547       0.0        0.0          NaN                 27516.0   \n",
+       "1         11193347       0.0        0.0          NaN                    10.0   \n",
+       "2         11215747       0.0        0.0          NaN                    10.0   \n",
+       "3         11229347       0.0        0.0          NaN                  2108.0   \n",
+       "4         11324547       4.0        2.0       3633.0                296425.0   \n",
+       "...            ...       ...        ...          ...                     ...   \n",
+       "2152859   14356230       4.0        3.0       2262.0                960756.0   \n",
+       "2152860   14157725       4.0        4.5       3127.0                536061.0   \n",
+       "2152861   14356183       0.0        0.0          NaN                208057.0   \n",
+       "2152862   14367624       3.0        2.5       1974.0                424353.0   \n",
+       "2152863   12385768       4.0        4.0       2110.0                554009.0   \n",
+       "\n",
+       "         year_built  tax_amount  fed_code  \n",
+       "0               NaN         NaN    6037.0  \n",
+       "1               NaN         NaN    6037.0  \n",
+       "2               NaN         NaN    6037.0  \n",
+       "3               NaN      174.21    6037.0  \n",
+       "4            2005.0     6941.39    6037.0  \n",
+       "...             ...         ...       ...  \n",
+       "2152859      2015.0    13494.52    6059.0  \n",
+       "2152860      2014.0     6244.16    6059.0  \n",
+       "2152861         NaN     5783.88    6059.0  \n",
+       "2152862      2015.0     5302.70    6059.0  \n",
+       "2152863      2014.0     6761.20    6037.0  \n",
+       "\n",
+       "[2152864 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrangle.get_zillow_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf00e27b-3faa-4cc8-8991-027e1c156728",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "6a7f68a5-f4f3-4e19-8091-f614013eec81",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 1. "
    ]
