--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -1957,7 +1957,7 @@
    "id": "31d68284-d10b-46fc-a42a-7ebadabdfbb0",
    "metadata": {},
    "source": [
-    "### Feature Engineering (K-Best) "
+    "### Feature Engineering (RFE) "
    ]
   },
   {
@@ -1980,14 +1980,6 @@
    "source": [
     "rfe(X_train, y_train, 3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "191f2503-7338-4ba6-84f1-0be3ee72c29d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
